--- a/css/gallery.scss
+++ b/css/gallery.scss
@@ -77,6 +77,16 @@ body {
   display: flex;
 }
 
+.back {
+  position: absolute;
+  top: 2.5rem;
+  left: 50%;
+  transform: translate(-50%);
+  text-decoration: none;
+  font-size: 1.4rem;
+  color: #323232;
+}
+
 // HEADING
 .heading {
   text-align: center;
