--- a/css/gallery.css
+++ b/css/gallery.css
@@ -46,6 +46,16 @@ body {
   letter-spacing: 0.4rem;
 }
 
+body {
+  width: 100%;
+  height: 100vh;
+  background-color: #eeeeee;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+}
+
 .heading--primary {
   font-size: 2.4rem;
   color: rgba(50, 50, 50, 0.85);
@@ -94,18 +104,31 @@ body {
   -ms-grid-rows: auto;
       grid-template-rows: auto;
   grid-gap: 1.5rem;
-      grid-template-areas: "img-1 img-2 img-3 img-3" "img-1 img-4 img-5 img-6" "img-7 img-7 img-8 img-6";
+      grid-template-areas: "img-1 img-2 img-3 img-3"
+ "img-1 img-4 img-5 img-6"
+ "img-7 img-7 img-8 img-6";
 }
 
 @media only screen and (max-width: 56.25em) {
   .image-gallery {
-        grid-template-areas: "img-1 img-1 img-2 img-2" "img-1 img-1 img-3 img-3" "img-4 img-4 img-5 img-5" "img-6 img-7 img-7 img-7" "img-8 img-8 img-8 img-8";
+        grid-template-areas: "img-1 img-1 img-2 img-2"
+ "img-1 img-1 img-3 img-3"
+ "img-4 img-4 img-5 img-5"
+ "img-6 img-7 img-7 img-7"
+ "img-8 img-8 img-8 img-8";
   }
 }
 
 @media only screen and (max-width: 37.5em) {
   .image-gallery {
-        grid-template-areas: "img-1 img-1 img-1 img-1" "img-2 img-2 img-2 img-2" "img-3 img-3 img-3 img-3" "img-4 img-4 img-4 img-4" "img-5 img-5 img-5 img-5" "img-6 img-6 img-6 img-6" "img-7 img-7 img-7 img-7" "img-8 img-8 img-8 img-8";
+        grid-template-areas: "img-1 img-1 img-1 img-1"
+ "img-2 img-2 img-2 img-2"
+ "img-3 img-3 img-3 img-3"
+ "img-4 img-4 img-4 img-4"
+ "img-5 img-5 img-5 img-5"
+ "img-6 img-6 img-6 img-6"
+ "img-7 img-7 img-7 img-7"
+ "img-8 img-8 img-8 img-8";
   }
 }
 
