--- a/css/gallery.css
+++ b/css/gallery.css
@@ -40,20 +40,21 @@ body {
   display: flex;
 }
 
+.back {
+  position: absolute;
+  top: 2.5rem;
+  left: 50%;
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+  text-decoration: none;
+  font-size: 1.4rem;
+  color: #323232;
+}
+
 .heading {
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.4rem;
-}
-
-body {
-  width: 100%;
-  height: 100vh;
-  background-color: #eeeeee;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: relative;
 }
 
 .heading--primary {
